Collection list + updates

--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -109,6 +109,31 @@
                     ]
                 },
                 {
+                    "type": "url",
+                    "id": "header_megamenu_image_url",
+                    "label": "Image URL"
+                },
+                {
+                    "type": "select",
+                    "id": "header_megamenu_image_position",
+                    "label": "Position",
+                    "options": [
+                        {
+                            "value": "first-column",
+                            "label": "First column"
+                        },
+                        {
+                            "value": "last-column",
+                            "label": "Last column"
+                        }
+                    ]
+                },
+                {
+                    "type": "text",
+                    "id": "header_megamenu_image_text",
+                    "label": "Text"
+                },
+                {
                     "type": "text",
                     "id": "header_megamenu_image_trigger",
                     "label": "Menu trigger"
