--- a/sections/highlights.liquid
+++ b/sections/highlights.liquid
@@ -153,7 +153,7 @@
                 {
                     "type": "url",
                     "id": "highlights_link_url",
-                    "label": "Link url"
+                    "label": "Link URL"
                 }
             ]
         }
