Highlights + Fonts + Collection list

--- a/assets/custom.css.liquid
+++ b/assets/custom.css.liquid
@@ -71,7 +71,7 @@
     --heading-xl: calc(var(--base-font-size) * 3); /* 48px */
     --heading-lg: calc(var(--base-font-size) * 2.25); /* 36px */
     --heading-md: calc(var(--base-font-size) * 1.75); /* 28px */
-    --heading-sm: calc(var(--base-font-size) * 1.25); /* 20px */ 
+    --heading-sm: calc(var(--base-font-size) * 1.375); /* 22px */ 
     --heading-xs: calc(var(--base-font-size) * 1.125); /* 18px */
     --body-md: calc(var(--base-font-size) * 1); /* 16px */
     --body-sm: calc(var(--base-font-size) / 1.143); /* 14px */
@@ -80,9 +80,14 @@
   
 @media only screen and (max-width: 1024px) {
     :root {
-        --body-md: calc(var(--base-font-size) * 0.875); /* 14px */
-        --heading-xl: calc(var(--base-font-size) * 2.25); /* 32px */
-        --heading-xs: calc(var(--base-font-size) * 1); /* 32px */
+        --heading-xl: calc(var(--base-font-size) * 2.25); /* 32px Updated*/
+        --heading-lg: calc(var(--base-font-size) * 2.25); /* 36px */
+        --heading-md: calc(var(--base-font-size) * 1.75); /* 28px */
+        --heading-sm: calc(var(--base-font-size) * 1.375); /* 22px */ 
+        --heading-xs: calc(var(--base-font-size) * 1); /* 16px Updated */
+        --body-md: calc(var(--base-font-size) * 0.875); /* 14px Updated */
+        --body-sm: calc(var(--base-font-size) / 1.143); /* 14px */
+        --body-xs: calc(var(--body-sm) / 1.333); /* 12px */
     }
 }
 
