--- a/sections/highlights.liquid
+++ b/sections/highlights.liquid
@@ -7,11 +7,11 @@
 <p class="body-sm">Lorem ipsum dolor sit amet,<br>consectetur adipiscing elit.</p><br><br>
 <p class="body-xs">Lorem ipsum dolor sit amet,<br>consectetur adipiscing elit.</p><br><br>  -->
 
-
+ 
 
 <div class="clr-highlights-background">
     <div class="md:px-6 max-width mx-auto">
-            <div class="md:px-4 py-6{% if section.settings.highlights_layout_mobile != 'highlight-grid' %} main-carousel md:flex{% elsif section.settings.highlights_layout_mobile == 'highlight-grid' %} grid grid-cols-2 gap-4 md:flex md:justify-between {% endif %}" data-flickity='{ "cellAlign": "left", "contain": true, "pageDots": false, "watchCSS": true, "prevNextButtons": false }'> 
+            <div class="py-6{% if section.settings.highlights_layout_mobile != 'highlight-grid' %} main-carousel lg:flex {% elsif section.settings.highlights_layout_mobile == 'highlight-grid' %} grid grid-cols-2 gap-4 md:flex md:justify-between {% endif %}" data-flickity='{ "cellAlign": "left", "contain": true, "pageDots": false, "watchCSS": true, "prevNextButtons": false }'> 
                 {% for block in section.blocks %}
                     <div class="carousel-cell">
                         <div class="{% if section.settings.highlight_icon_layout == 'left' %} flex text-left justify-center {% else %} text-center {% endif %}">
@@ -141,8 +141,8 @@
                             </div>
                             <div class="my-auto">
                                 {% if block.settings.highlight_heading != blank %}<h5 class="heading-xs font-bold clr-highlights-heading {% if block.settings.highlight_text != blank %} mb-1 {% endif %}">{{ block.settings.highlight_heading }}</h5> {% endif %}
-                                {% if block.settings.highlight_text != blank %}<p class="body-md clr-highlights-text {% if block.settings.highlights_link_url != blank %} mb-2 {% endif %}">{{ block.settings.highlight_text }}</p> {% endif %}
-                                {% if block.settings.highlights_link_url != blank %}<a target="_blank" class="clr-general-links" href="{{ block.settings.highlights_link_url }}">{{ block.settings.highlight_link_text }}</a> {% endif %}
+                                {% if block.settings.highlight_text != blank %}<p class="body-sm clr-highlights-text {% if block.settings.highlights_link_url != blank %} mb-2 {% endif %}">{{ block.settings.highlight_text }}</p> {% endif %}
+                                {% if block.settings.highlights_link_url != blank %}<a class="clr-general-links" href="{{ block.settings.highlights_link_url }}">{{ block.settings.highlight_link_text }}</a> {% endif %}
                             </div>
                         </div>
                     </div>
@@ -158,10 +158,13 @@
     #shopify-section-{{ section.id }} .clr-highlights-icon { fill: {{ section.settings.highlight_icon_color }}; }
     #shopify-section-{{ section.id }} .highlights-icon-size { height: {{ section.settings.highlight_icon_size }}px; }
     #shopify-section-{{ section.id }} .highlights-icon-size { width: {{ section.settings.highlight_icon_size }}px; }
-    #shopify-section-{{ section.id }} .carousel-cell { {% if section.blocks.size == 1 %} width:100%; {% else %} width:55%; {% endif %} {% if section.settings.highlights_layout_mobile == 'highlight-grid' %} width: 100%; {% endif %} }
+    #shopify-section-{{ section.id }} .carousel-cell { {% if section.blocks.size == 1 %} width:100%; {% else %} width: 60%; {% endif %} {% if section.settings.highlights_layout_mobile == 'highlight-grid' %} width: 100%; {% endif %} }
     #shopify-section-{{ section.id }} .main-carousel { width: 100%; }
     #shopify-section-{{ section.id }} .main-carousel:after { content: 'flickity'; display: none; }
-    @media screen and ( min-width: 768px ) {  #shopify-section-{{ section.id }} .main-carousel:after { content: ''; } }
+    @media screen and ( min-width: 1024px ) { #shopify-section-{{ section.id }} .main-carousel:after { content: ''; } }
+    @media screen and ( min-width: 640px ) {
+        #shopify-section-{{ section.id }} .carousel-cell { {% if section.blocks.size == 1 %} width:100%; {% else %} width: 35%; {% endif %} }
+    }
 </style>
 
 {% schema %}
