--- a/assets/application.css.liquid
+++ b/assets/application.css.liquid
@@ -775,49 +775,6 @@ video {
   --tw-aspect-h: 16;
 }
 
-.btn-blue {
-  --tw-bg-opacity: 1;
-  background-color: rgba(59, 130, 246, var(--tw-bg-opacity));
-}
-
-.btn-blue:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgba(29, 78, 216, var(--tw-bg-opacity));
-}
-
-.btn-blue {
-  border-radius: 0.5rem;
-  font-weight: 600;
-}
-
-.btn-blue:focus {
-  outline: 2px solid transparent;
-  outline-offset: 2px;
-}
-
-.btn-blue {
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-  padding-left: 1rem;
-  padding-right: 1rem;
-  --tw-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.btn-blue:focus {
-  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
-  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
-  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
-  --tw-ring-opacity: 1;
-  --tw-ring-color: rgba(96, 165, 250, var(--tw-ring-opacity));
-  --tw-ring-opacity: 0.75;
-}
-
-.btn-blue {
-  --tw-text-opacity: 1;
-  color: rgba(255, 255, 255, var(--tw-text-opacity));
-}
-
 /* purgecss end ignore */
 
 /* Custom CSS */
@@ -14589,6 +14546,10 @@ video {
 
 .max-w-screen-2xl {
   max-width: 1536px;
+}
+
+.max-w-6\/10 {
+  max-width: 60%;
 }
 
 .min-h-0 {
@@ -46417,6 +46378,10 @@ video {
     max-width: 1536px;
   }
 
+  .sm\:max-w-6\/10 {
+    max-width: 60%;
+  }
+
   .sm\:min-h-0 {
     min-height: 0px;
   }
@@ -78163,6 +78128,10 @@ video {
 
   .md\:max-w-screen-2xl {
     max-width: 1536px;
+  }
+
+  .md\:max-w-6\/10 {
+    max-width: 60%;
   }
 
   .md\:min-h-0 {
@@ -109913,6 +109882,10 @@ video {
     max-width: 1536px;
   }
 
+  .lg\:max-w-6\/10 {
+    max-width: 60%;
+  }
+
   .lg\:min-h-0 {
     min-height: 0px;
   }
@@ -141661,6 +141634,10 @@ video {
     max-width: 1536px;
   }
 
+  .xl\:max-w-6\/10 {
+    max-width: 60%;
+  }
+
   .xl\:min-h-0 {
     min-height: 0px;
   }
@@ -173407,6 +173384,10 @@ video {
 
   .\32xl\:max-w-screen-2xl {
     max-width: 1536px;
+  }
+
+  .\32xl\:max-w-6\/10 {
+    max-width: 60%;
   }
 
   .\32xl\:min-h-0 {
