--- a/sections/collection-list.liquid
+++ b/sections/collection-list.liquid
@@ -1,21 +1,20 @@
-<section class="max-width mx-auto text-center px-4 md:px-6 py-12 lg:py-16">
+<section class="max-width mx-auto text-center px-4 md:px-6 py-12 lg:py-16"> 
     {% if section.settings.collection_list_heading != blank or section.settings.collection_list_subheading != blank %}
         <div class="mb-6 lg:mb-8">
             <h2 class="heading-sm clr-general-heading mb-3 lg:mb-4">{{ section.settings.collection_list_heading }}</h2>
             <p class="body-md clr-general-text">{{ section.settings.collection_list_subheading }}</p>
         </div>
-    {% endif %}
+    {% endif %} 
     <div class="{% if section.settings.collection_list_link_text != blank %} mb-6 lg:mb-8 {% endif %} grid gap-2 lg:gap-5 {% if section.settings.collection_list_per_row == 1 %} lg:grid-cols-1 {% elsif section.settings.collection_list_per_row == 2%} lg:grid-cols-2 {% elsif section.settings.collection_list_per_row == 3 %} lg:grid-cols-3 {% elsif section.settings.collection_list_per_row == 4 %} lg:grid-cols-4 {% elsif section.settings.collection_list_per_row == 5 %} lg:grid-cols-5 {% endif %}{% if section.settings.collection_list_per_row_mobile == 1 %} grid-cols-1 {% elsif section.settings.collection_list_per_row_mobile == 2 %} grid-cols-2 {% elsif section.settings.collection_list_per_row_mobile == 3 %} grid-cols-3 {% endif %}">
         {% for block in section.blocks %}
         {%- assign collection = collections[block.settings.collection_list] -%}
             {% include 'collection-list-tile', collection: collection %}
         {% endfor %}
     </div>
-    <a class="clr-general-links" href="{{ routes.collections_url }}">{{ section.settings.collection_list_link_text }}</a>
+    <a class="btn-sm btn-secondary" href="{{ routes.collections_url }}">{{ section.settings.collection_list_link_text }}</a>
 </section>
 
-
-{% schema %}
+{% schema %} 
 {
     "name": "Collection list",
     "settings": [
@@ -31,7 +30,7 @@
         },
         {
             "type": "range",
-            "id": "collection_list_aspect",
+            "id": "collection_list_aspect", 
             "label": "Aspect ratio",
             "unit": ":1",
             "min": 0.5,
@@ -56,25 +55,6 @@
             "max": 3,
             "step": 1,
             "default": 2
-        },
-        {
-            "type": "select",
-            "id": "collection_list_align",
-            "label": "Align",
-            "options": [
-                {
-                    "value": "top-left",
-                    "label": "Top Left"
-                },
-                {
-                    "value": "center",
-                    "label": "Center"
-                },
-                {
-                    "value": "bottom-left",
-                    "label": "Bottom Left"
-                }
-            ]
         },
         {
             "type": "text",
