--- a/snippets/collection-list-tile.liquid
+++ b/snippets/collection-list-tile.liquid
@@ -1,7 +1,6 @@
 <a href="{{ collection.url }}">
-    <div class="aspect-w-1 aspect-h-1">
-        <img src="{% if block.settings.collection_list_image != blank %}{{ block.settings.collection_list_image | img_url: 'master' }}{% elsif block.settings.collection_list_image == blank %}{{ collection.image | img_url: 'master' }}{% endif %}" alt="">
+    <div class="aspect-w-10 aspect-h-{{ section.settings.collection_list_aspect | times: 10 | round }}">
+        <img class="object-cover" src="{% if block.settings.collection_list_image != blank %}{{ block.settings.collection_list_image | img_url: 'master' }}{% elsif block.settings.collection_list_image == blank %}{{ collection.image | img_url: 'master' }}{% endif %}" alt="">
     </div>
     <h3 class="mt-3 body-md clr-general-text">{% if block.settings.collection_list_custom_title != blank %}{{ block.settings.collection_list_custom_title }}{% elsif block.settings.collection_list_custom_title == blank %}{{ collection.title }}{% endif %}</h3>
-    
 </a>
