Rich text + Custom CSS (Font resposnive update)

--- a/assets/custom.css.liquid
+++ b/assets/custom.css.liquid
@@ -66,7 +66,6 @@
 
 :root {
     --base-font-size: {{ settings.base_font_size }}px; /* 16px default */
-    --base-scale-ratio: 1.333;
 
     --heading-xl: calc(var(--base-font-size) * 3); /* 48px */
     --heading-lg: calc(var(--base-font-size) * 2.25); /* 36px */
@@ -81,7 +80,7 @@
 @media only screen and (max-width: 1024px) {
     :root {
         --heading-xl: calc(var(--base-font-size) * 2.25); /* 32px Updated*/
-        --heading-lg: calc(var(--base-font-size) * 2.25); /* 36px */
+        --heading-lg: calc(var(--base-font-size) * 1.75); /* 28px Updated */
         --heading-md: calc(var(--base-font-size) * 1.75); /* 28px */
         --heading-sm: calc(var(--base-font-size) * 1.375); /* 22px */ 
         --heading-xs: calc(var(--base-font-size) * 1); /* 16px Updated */
