--- a/sections/slideshow.liquid
+++ b/sections/slideshow.liquid
@@ -1,4 +1,150 @@
+<div class="main-carousel relative 
+{% if section.settings.slideshow_height_mobile == 'small' %}
+h-80
+{% elsif section.settings.slideshow_height_mobile == 'medium' %}
+h-96
+{% elsif section.settings.slideshow_height_mobile == 'large' %}
+h-128
+{% elsif section.settings.slideshow_height_mobile == 'extra_large' %}
+h-144
+{% elsif section.settings.slideshow_height_mobile == 'fit_screen' %}
+h-screen
+{% endif %}
+{% if section.settings.slideshow_height == 'small' %}
+lg:h-128
+{% elsif section.settings.slideshow_height == 'medium' %}
+lg:h-144
+{% elsif section.settings.slideshow_height == 'large' %}
+lg:h-176
+{% elsif section.settings.slideshow_height == 'fit_screen' %}
+lg:h-screen
+{% endif %}
+{% if section.settings.slideshow_width == 'full_width' %}
+w-full
+{% elsif section.settings.slideshow_width == 'content_width' %}
+max-width my-6 mx-auto
+{% endif %}
+sm:h-172" 
+{% unless section.blocks.size == 1 %}
+data-flickity='{ "imagesLoaded": true,"wrapAround": true
+{% if section.settings.slideshow_autoplay == true %}
+, "autoPlay": {{section.settings.slideshow_autoplay_duration}}000 
+{% endif %}
+}'
+{% endunless %}
+>
+    {% for block in section.blocks %}
+        
+        <div class="carousel-cell h-full w-full flex flex-col absolute" id="slide-{{forloop.index}}">
+            <div class="w-full h-full absolute hero_image">
+                <img src="{{ block.settings.slideshow_image | img_url: 'master' }}" id="desktop_slide_{{forloop.index}}" alt="Slide {{ forloop.index }}" class="w-full h-full absolute object-cover 
+                {% if block.settings.slideshow_image_position == 'top' %}
+                object-top
+                {% elsif block.settings.slideshow_image_position == 'right' %}
+                object-right
+                {% elsif block.settings.slideshow_image_position == 'center' %}
+                object-center
+                {% elsif block.settings.slideshow_image_position == 'left' %}
+                object-left
+                {% elsif block.settings.slideshow_image_position == 'bottom' %}
+                object-bottom
+                {% endif %}
+                ">
+                {% unless block.settings.slideshow_image_mobile == blank %}
+                    <img src="{{ block.settings.slideshow_image_mobile | img_url: 'master' }}" id="mobile_slide_{{forloop.index}}" alt="Mobile Slide {{ forloop.index }}" class="w-full h-full absolute object-cover 
+                    {% if block.settings.slideshow_image_position == 'top' %}
+                    object-top
+                    {% elsif block.settings.slideshow_image_position == 'right' %}
+                    object-right
+                    {% elsif block.settings.slideshow_image_position == 'center' %}
+                    object-center
+                    {% elsif block.settings.slideshow_image_position == 'left' %}
+                    object-left
+                    {% elsif block.settings.slideshow_image_position == 'bottom' %}
+                    object-bottom
+                    {% endif %}
+                    ">
 
+                    <style>
+                        @media only screen and (max-width: 768px) {
+                            #desktop_slide_{{forloop.index}} {
+                                display: none;
+                            }
+                        } 
+                        @media only screen and (min-width: 768px) {
+                            #mobile_slide_{{forloop.index}} {
+                                display: none;
+                            }
+                        } 
+                    </style>
+                {% endunless %}
+
+                <style>
+                    :root {
+                        --slide-text-color: {{ block.settings.slideshow_text_color }};
+                    }
+                    
+
+                    .flickity-button {
+                        color: var(--slide-text-color);
+                    }
+                </style>
+
+                {% if section.settings.slideshow_overlay_enable == true %}
+                <div class="w-full h-full absolute top-0" style="
+                {% if section.settings.slideshow_overlay_style == 'solid' %}
+                background-color: {{ section.settings.slideshow_overlay_color }}; 
+                {% elsif section.settings.slideshow_overlay_style == 'gradient' %}
+                background-image: linear-gradient(rgba(0,0,0,0), {{ section.settings.slideshow_overlay_color }});
+                {% endif %}
+                filter: opacity({{ section.settings.slideshow_overlay_opacity }}%);"></div>
+                {% endif %}
+            </div>
+            <div class="w-full h-full flex flex-col 
+            {% if block.settings.slideshow_text_position_horizontal == 'top-left' %}
+            items-start justify-start text-left 
+            {% elsif block.settings.slideshow_text_position_horizontal == 'top-center' %}
+            items-center justify-start text-center 
+            {% elsif block.settings.slideshow_text_position_horizontal == 'top-right' %}
+            items-end justify-start text-right 
+            {% elsif block.settings.slideshow_text_position_horizontal == 'center-left' %}
+            items-start justify-center text-left 
+            {% elsif block.settings.slideshow_text_position_horizontal == 'center' %}
+            items-center justify-center text-center 
+            {% elsif block.settings.slideshow_text_position_horizontal == 'center-right' %}
+            items-end justify-center text-right 
+            {% elsif block.settings.slideshow_text_position_horizontal == 'bottom-left' %}
+            items-start justify-end text-left
+            {% elsif block.settings.slideshow_text_position_horizontal == 'bottom-center' %}
+            items-center justify-end text-center 
+            {% elsif block.settings.slideshow_text_position_horizontal == 'bottom-right' %}
+            items-end justify-end text-right 
+            {% endif %}
+            absolute px-8 py-12 md:p-12 lg:p-16">
+                <div class="max-w-2xl absolute mx-auto hero_content">
+                    <h1 class="heading-xl mb-4" style="color: {{ block.settings.slideshow_text_color }}">{{ block.settings.slideshow_heading }}</h1>
+                    <h2 class="body-md mb-6" style="color: {{ block.settings.slideshow_text_color }}">{{ block.settings.slideshow_subheading }}</h2>
+                    <div class="space-x-2">
+                        <a href="{{ block.settings.slideshow_button_url }}" class="btn-lg 
+                        {% if block.settings.slideshow_button_style == 'slideshow_button_style_primary' %}
+                        btn-primary
+                        {% elsif block.settings.slideshow_button_style == 'slideshow_button_style_secondary' %}
+                        btn-secondary
+                        {% endif %}">{{ block.settings.slideshow_button_text }}</a>
+                        {% unless block.settings.slideshow_second_button_text == blank %}
+                            <a href="{{ block.settings.slideshow_second_button_url }}" class="btn-lg
+                            {% if block.settings.slideshow_second_button_style == 'slideshow_second_button_style_primary' %}
+                            btn-primary
+                            {% elsif block.settings.slideshow_second_button_style == 'slideshow_second_button_style_secondary' %}
+                            btn-secondary
+                            {% endif %}">{{ block.settings.slideshow_second_button_text }}</a>
+                        {% endunless %}
+                    </div>
+                </div>
+            </div>
+        </div>
+    {% endfor %}
+</div>
 
 {% schema %}
 {
@@ -65,7 +211,7 @@
                 {
                     "type": "textarea",
                     "id": "slideshow_subheading",
-                    "label": "Subeading"
+                    "label": "Subheading"
                 },
                 {
                     "type": "color",
@@ -187,14 +333,14 @@
             "type": "select",
             "id": "slideshow_width",
             "label": "Slideshow width",
-            "default": "full-width",
+            "default": "full_width",
             "options": [
                 {
-                    "value": "full-width",
+                    "value": "full_width",
                     "label": "Full width"
                 },
                 {
-                    "value": "content-width",
+                    "value": "content_width",
                     "label": "Content width"
                 }
             ]
@@ -220,14 +366,6 @@
                 {
                     "value": "fit_screen",
                     "label": "Fit screen"
-                },
-                {
-                    "value": "adopt_to_first_slide",
-                    "label": "Adopt to first slide"
-                },
-                {
-                    "value": "original_aspect_ratio",
-                    "label": "Original aspect ratio"
                 }
             ]
         },
@@ -256,14 +394,6 @@
                 {
                     "value": "fit_screen",
                     "label": "Fit screen"
-                },
-                {
-                    "value": "adopt_to_first_slide",
-                    "label": "Adopt to first slide"
-                },
-                {
-                    "value": "original_aspect_ratio",
-                    "label": "Original aspect ratio"
                 }
             ]
         },
@@ -273,8 +403,10 @@
         },
         {
             "type": "checkbox",
+            "default": true,
             "id": "slideshow_overlay_enable",
             "label": "Activate overlay"
+            
         },
         {
             "type": "range",
@@ -283,7 +415,7 @@
             "min": 1,
             "max": 100,
             "step": 1,
-            "default": 15,
+            "default": 30,
             "unit": "%"
         },
         {
@@ -293,13 +425,14 @@
             "default": "solid",
             "options": [
                 {
-                    "value": "gradient",
-                    "label": "Gradient"
-                },
-                {
                     "value": "solid",
                     "label": "Solid"
+                },
+                {
+                    "value": "gradient",
+                    "label": "Gradient"
                 }
+                
             ]
         },
         {
