--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -20,6 +20,7 @@
   <main role="main">
     {{ content_for_layout }}
   </main>
+  {% section 'footer' %}
 
   {{ 'jquery.js' | asset_url | script_tag }}
   {{ 'flickity.js' | asset_url | script_tag }} 
