--- a/sections/collection-list.liquid
+++ b/sections/collection-list.liquid
@@ -1,8 +1,8 @@
 <section class="max-width mx-auto text-center px-4 md:px-6 py-12 lg:py-16"> 
     {% if section.settings.collection_list_heading != blank or section.settings.collection_list_subheading != blank %}
         <div class="mb-6 lg:mb-8">
-            <h2 class="heading-sm clr-general-heading mb-3 lg:mb-4">{{ section.settings.collection_list_heading }}</h2>
-            <p class="body-md clr-general-text">{{ section.settings.collection_list_subheading }}</p>
+            {% if section.settings.collection_list_heading != blank %}<h2 class="heading-sm clr-general-heading mb-3 lg:mb-4">{{ section.settings.collection_list_heading }}</h2>{% endif %}
+            {% if section.settings.collection_list_subheading != blank %}<p class="body-md clr-general-text">{{ section.settings.collection_list_subheading }}</p>{% endif %}
         </div>
     {% endif %} 
     <div class="{% if section.settings.collection_list_link_text != blank %} mb-6 lg:mb-8 {% endif %} grid gap-2 lg:gap-5 {% if section.settings.collection_list_per_row == 1 %} lg:grid-cols-1 {% elsif section.settings.collection_list_per_row == 2%} lg:grid-cols-2 {% elsif section.settings.collection_list_per_row == 3 %} lg:grid-cols-3 {% elsif section.settings.collection_list_per_row == 4 %} lg:grid-cols-4 {% elsif section.settings.collection_list_per_row == 5 %} lg:grid-cols-5 {% endif %}{% if section.settings.collection_list_per_row_mobile == 1 %} grid-cols-1 {% elsif section.settings.collection_list_per_row_mobile == 2 %} grid-cols-2 {% elsif section.settings.collection_list_per_row_mobile == 3 %} grid-cols-3 {% endif %}">
@@ -13,6 +13,19 @@
     </div>
     <a class="btn-sm btn-secondary" href="{{ routes.collections_url }}">{{ section.settings.collection_list_link_text }}</a>
 </section>
+
+<style>
+    @media screen and (max-width: 1024px) {
+        #shopify-section-{{ section.id }} .mt-dynamic:nth-child(n+{{ section.settings.collection_list_per_row_mobile | plus: 1 }}) {
+            margin-top: 8px;
+        }
+    }
+    @media screen and (min-width: 1024px) {
+        #shopify-section-{{ section.id }} .mt-dynamic:nth-child(n+{{ section.settings.collection_list_per_row | plus: 1 }}) {
+            margin-top: 16px;
+        }
+    }
+</style>
 
 {% schema %} 
 {
