--- a/sections/announcement.liquid
+++ b/sections/announcement.liquid
@@ -1,6 +1,6 @@
-{% if section.settings.announcement_activate == true %}
+{% if section.settings.announcement_activate == true %} 
     <section class="clr-announcement-background relative">
-        {% if section.settings.announcement_link_text != blank %}
+        {% if section.settings.announcement_text != blank or section.settings.announcement_link_text != blank %}
             <a class="absolute inset-0" href="{{ section.settings.announcement_link_url }}"></a>
             <div class="max-width mx-auto flex items-center justify-center space-x-3 py-4 px-4">
                 <p class="body-sm text-center clr-announcement-text">{{ section.settings.announcement_text }}</p>
