--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -11,6 +11,7 @@
   {{ 'application.css' | asset_url | stylesheet_tag }}
   {{ 'custom.css' | asset_url | stylesheet_tag }}
   {{ 'flickity.css' | asset_url | stylesheet_tag }}
+  {{ 'feather.css' | asset_url | stylesheet_tag }}
   
 
 </head>
