--- a/assets/custom.css.liquid
+++ b/assets/custom.css.liquid
@@ -189,6 +189,7 @@
     color: #0A0A0A;
 }
 
+/* HERO */
 @media only screen and (max-width: 768px) {
     .hero_content {
     max-width: 90%;
@@ -210,3 +211,14 @@
         display: inline-block;
     }
 }
+
+
+/* HEADER */
+
+#header ul li:hover .dropdown-menu {
+    visibility: visible;
+}
+/*   
+header, .header {
+    transition: all 0.3s ease-out;
+} */
