--- a/assets/flickity.css
+++ b/assets/flickity.css
@@ -11,7 +11,7 @@ https://flickity.metafizzy.co
   .flickity-viewport {
     overflow: hidden;
     position: relative;
-    height: 100%!important;
+    height: 100%;
   }
   
   .flickity-slider {
