--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -1,4 +1,136 @@
+<div class="absolute w-full">
+  <div class="w-full bg-black bg-opacity-40 absolute top-0 left-0 right-0 bottom-0 h-screen hidden overlaySearch" style="z-index: 5;"></div>
+  <div class="bg-white relative z-10 header">
+    <div class="grid grid-cols-3 2xl:container 2xl:mx-auto px-4 2xl:px-0 items-center">
+      <nav class="flex h-full items-center justify-start">
+        <ul class="parent hidden lg:flex h-full">
 
+          {% for link in linklists[section.settings.header_main_menu].links %}
+            <li>
+              <a class="flex items-center body-md px-4 space-x-1 h-full truncate" href="{{ link.url }}"><p>{{ link.title }}</p>
+              {% if link.links != blank %}
+                  {% if linklists[section.settings.header_main_menu].levels > 1 %}
+                      <span class="icon icon-chevron-down"></span>
+                  {% endif %}
+              {% endif %}
+              </a>
+
+              {% if link.links != blank %}
+              <div class="bg-white shadow-md z-50 absolute invisible dropdown-menu py-4 w-60 {% if link.links.size > 1 and link.levels > 1 %}py-8 left-0 w-full{% endif %}">
+                <div class="2xl:max-width mx-auto flex {% if link.levels == 1 %}flex-col px-4{% else %}px-12 space-x-4{% endif %} w-full">
+                  {% for child_link in link.links %}
+                    {% if child_link.links == blank %}
+                    <div class="w-full py-1.5">
+                        <a href="{{ child_link.url }}" class="body-md">{{ child_link.title }}</a>
+                    </div>
+                    {% else %}
+                        <div class="
+                        {% if link.links.size == 1 %}
+                            w-full
+                        {% elsif link.links.size == 2 %}
+                            w-1/2
+                        {% elsif link.links.size == 3 %}
+                            w-1/3
+                        {% elsif link.links.size == 4 %}
+                            w-1/4
+                        {% elsif link.links.size == 5 %}
+                            w-1/5
+                        {% elsif link.links.size == 6 %}
+                            w-1/6    
+                        {% elsif link.links.size == 7 %}
+                            w-1/7    
+                        {% elsif link.links.size == 8 %}
+                            w-1/8    
+                        {% endif %}">
+                            <a href="{{ child_link.url }}" class="font-semibold heading-xs">{{ child_link.title }}</a>
+                            {% if child_link.links != blank %}
+                            <ul class="grandchild body-md space-y-2 mt-4">
+                            {% for grandchild_link in child_link.links %}
+                            <li>
+                                <a href="{{ grandchild_link.url }}">{{ grandchild_link.title }}</a>
+                            </li>
+                            {% endfor %}
+                            </ul>
+                            {% endif %}
+                        </div>
+                    {% endif %}
+                  {% endfor %}
+                 {% unless link.levels == 1 %}
+                 <div class="w-1/2 flex space-x-4">
+                    <div class="image w-1/2">
+                        <a href="">
+                            <div class="aspect-w-4 aspect-h-5"><img src="//cdn.shopify.com/s/files/1/0534/1744/3492/collections/grain-lamp-jens-fager-muuto__150.jpg?v=1615139001" alt=""></div>
+                        </a>
+                        <p class="body-md py-4">
+                            <a href="">Get 15% with code "COOK15"</a>
+                        </p>
+                    </div>
+                    <div class="image w-1/2">
+                        <a href="">
+                            <div class="aspect-w-4 aspect-h-5"><img src="//cdn.shopify.com/s/files/1/0534/1744/3492/collections/cbd_812929cf-5c9f-41e0-ba4a-47a1e94be2b7.jpg?v=1615063701" alt=""></div>
+                        </a>
+                        <p class="body-md py-4">
+                            <a href="">Browse our new bed & bath arrivals</a>
+                        </p>
+                    </div>
+                 </div>
+                 {% endunless %}
+                </div>
+              </div>
+              {% endif %}
+            </li>
+          {% endfor %}
+        </ul>
+
+        
+        <div class="navSidebarMenu w-6 h-6 lg:hidden">
+        <a href="#" id="toggleSidebar"><span aria-hidden="true" class="text-2xl icon icon-menu"></span></a>
+        </div>
+      
+
+      </nav>
+      <div class="flex text-2xl font-semibold justify-center">
+        <a class="py-4" href="/">
+          {% if section.settings.logo != blank %}
+            <img class="object-cover h-{{ section.settings.logo_height }}" src="{{ section.settings.logo | img_url: '200x200' }}" alt="{{ shop.name }}">
+          {% elsif section.settings.logo == blank %}
+            {{ shop.name }}
+          {% endif %}
+        </a>
+      </div>
+      <div class="flex justify-end space-x-4">
+        <div class="search flex {% if section.settings.show_search == true %} flex {% elsif section.settings.show_search == false %} hidden {% endif %}">
+          <span class="text-2xl icon icon-search" aria-hidden="true"></span>
+        </div>
+        <div class="my-account hidden lg:flex">
+          {% if shop.customer_accounts_enabled %}
+            {% if customer %}
+              <a href="{{ routes.account_url }}">
+                <span class="text-2xl icon icon-user" aria-hidden="true"></span>
+              </a>
+            {% else %}
+              <a href="{{ routes.account_login_url }}">
+                <span class="text-2xl icon icon-user" aria-hidden="true"></span>
+              </a>
+            {% endif %}
+          {% endif %}
+        </div>
+
+        
+        
+        <div class="cart" data-cart-view>
+          <a href="{% if settings.cart_type == 'cart_type_page' %}/cart{% endif %}"{% if settings.cart_type == 'cart_type_drawer' %}@click.prevent="cartOpen = true"{% endif %}class="flex space-x-4">
+            <span class="text-2xl icon icon-shopping-cart" aria-hidden="true"></span>
+          </a>
+          
+        </div>
+      </div>
+    </div>
+    
+  </div>
+  <!-- End of Header -->
+
+</div>
 
 {% schema %}
 {
