--- a/assets/custom.css.liquid
+++ b/assets/custom.css.liquid
@@ -91,10 +91,28 @@
 }
 
 /* Max-width */
+
 .max-width {
     max-width: {{ settings.layout_max_width }}px;
+    padding-left: 24px;
+    padding-right: 24px;
 }
 
+@media screen and (max-width: 639px) {
+    .max-width {
+        max-width: {{ settings.layout_max_width }}px;
+        padding-left: 12px;
+        padding-right: 12px;
+    }
+}
+
+@media screen and (min-width: 640px) and (max-width: 1024px) {
+    .max-width {
+        max-width: {{ settings.layout_max_width }}px;
+        padding-left: 16px;
+        padding-right: 16px;
+    }
+}
 
 /* BUTTONS */
 /* Button sizes */
@@ -165,7 +183,7 @@
 /* INPUT */
 .input {
     height: 3rem;
-    width: 21.875rem;
+    width: 100%;
     padding: 0.375rem 0.75rem;
     border: 1px solid #E0E0E0;
     border-radius: 4px;
@@ -209,4 +227,8 @@
         font-weight: 500;
         display: inline-block;
     }
+}
+
+#header ul li:hover .dropdown-menu {
+    visibility: visible;
 }
