--- a/sections/collection-list.liquid
+++ b/sections/collection-list.liquid
@@ -1,4 +1,4 @@
-<section class="max-width mx-auto text-center px-4 md:px-6 py-12 lg:py-16"> 
+<section class="max-width mx-auto text-center py-12 lg:py-16"> 
     {% if section.settings.collection_list_heading != blank or section.settings.collection_list_subheading != blank %}
         <div class="mb-6 lg:mb-8">
             {% if section.settings.collection_list_heading != blank %}<h2 class="heading-sm clr-general-heading mb-3 lg:mb-4">{{ section.settings.collection_list_heading }}</h2>{% endif %}
@@ -24,7 +24,7 @@
         #shopify-section-{{ section.id }} .mt-dynamic:nth-child(n+{{ section.settings.collection_list_per_row | plus: 1 }}) {
             margin-top: 16px;
         }
-    }
+    } 
 </style>
 
 {% schema %} 
