--- a/sections/custom-html.liquid
+++ b/sections/custom-html.liquid
@@ -1,4 +1,4 @@
-<div class="max-width mx-auto px-4 sm:px-12 2xl:px-0 py-12 lg:py-24 space-y-12">
+<div class="max-width mx-auto py-12 lg:py-24 space-y-12">
     {{ section.settings.custom_html }}    
 </div>
     
