--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -1,7 +1,7 @@
 <!-- Footer -->
 
 <div class="py-8 md:py-12 w-full clr-footer-background bottom-0">
-    <div class="max-width mx-auto px-4 sm:px-12 2xl:px-0 md:grid gap-5 space-y-12 md:space-y-0
+    <div class="max-width mx-auto md:grid gap-5 space-y-12 md:space-y-0
         {% if section.blocks.size == 1 %}
         md:grid-cols-1
         {% elsif section.blocks.size == 2 %}
@@ -117,7 +117,7 @@
         {% endfor %}
     </div>
 
-    <div class="max-width mx-auto block px-4 sm:px-12 2xl:px-0 pt-8 md:pt-12 space-y-4 md:space-y-0 md:flex md:justify-between items-center">
+    <div class="max-width mx-auto block pt-8 md:pt-12 space-y-4 md:space-y-0 md:flex md:justify-between items-center">
         <div class="text-center md:text-left">
             <div class="flex space-x-2 justify-center mb-1">
             {% if shop.refund_policy != blank %}
@@ -136,7 +136,7 @@
             <a class="clr-general-links body-sm border-nav pr-2 leading-none" href="{{ shop.shipping_policy.url }}">{{ shop.shipping_policy.title}}</a>
             {% endif %}
         </div>
-            <p class="clr-general-light-text">&copy; {{ 'now' | date: "%Y" }}, <span class="clr-general-links body-sm">{{ shop.name | link_to: routes.root_url }}</span>
+            <p class="clr-general-light-text body-sm">&copy; {{ 'now' | date: "%Y" }}, <span class="clr-general-links body-sm">{{ shop.name | link_to: routes.root_url }}</span>
                  <span class="clr-general-links body-sm">{{ powered_by_link }} </span>
             </p>
         </div>
