--- a/sections/newsletter.liquid
+++ b/sections/newsletter.liquid
@@ -6,7 +6,7 @@
   - Heading: title of the newsletter section
   - Subheading: description of the newsletter section
 {%- endcomment -%}
-<section class="sm:w-128 mx-auto px-4 py-12 lg:py-24 space-y-12">
+<section class="sm:w-128 mx-auto py-12 lg:py-24 space-y-12">
     <div class="text-center space-y-4">
         {% if section.settings.section_title != blank %}
         <h2 class="heading-sm clr-general-text" for="Email">{{ section.settings.section_title | escape }}</h2>
