--- a/sections/rich-text.liquid
+++ b/sections/rich-text.liquid
@@ -1,5 +1,5 @@
-<section class="{% if section.settings.richtext_height == 'small' %}py-12 lg:py-16 {% elsif section.settings.richtext_height == 'large' %} py-16 lg:py-32 {% endif %}">
-    <div class="px-4 md:px-0 mx-auto">
+<section class="max-width {% if section.settings.richtext_height == 'small' %}py-12 lg:py-16 {% elsif section.settings.richtext_height == 'large' %} py-16 lg:py-32 {% endif %}">
+    <div class="mx-auto">
       <div class="max-w-screen-sm mx-auto text-center">
         <h2 class="heading-lg clr-general-headings mb-4">{{ section.settings.richtext_heading }}</h2>
         <p class="body-md clr-general-text mb-6">{{ section.settings.richtext_text }}</p>
