--- a/sections/logo-list.liquid
+++ b/sections/logo-list.liquid
@@ -1,5 +1,5 @@
 <section class="clr-background-logo-list">
-    <div class="max-width mx-auto px-4 py-4">
+    <div class="max-width mx-auto py-4">
         {% if section.settings.logo_list_heading != blank or section.settings.logo_list_text != blank %}
         <div class="text-center mb-6 lg:mb-8 {% if section.settings.logo_list_text != blank %} space-y-3 lg:space-y-4 {% endif %}">
             {% if section.settings.logo_list_heading != blank %}<h2 class="heading-sm clr-general-headings">{{ section.settings.logo_list_heading }}</h2>{% endif %}
